--- a/src/app/eng/page.module.scss
+++ b/src/app/eng/page.module.scss
@@ -43,3 +43,19 @@
 .configItem {
     margin-right: 20px;
 }
+
+.fullVideo {
+    max-width: 100vw;
+    width: 100vw;
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100vh;
+}
+
+.bottomSettings {
+    width: 100vw;
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+}
