--- a/src/app/day/components/styles.module.scss
+++ b/src/app/day/components/styles.module.scss
@@ -3,4 +3,9 @@
     display: flex;
     flex-direction: column;
     gap: 2px;
+    height: 100%;
+}
+.textarea {
+    width: 100%;
+    height: 100%;
 }
