--- a/src/app/english/english.css
+++ b/src/app/english/english.css
@@ -69,6 +69,9 @@
         .text {
             cursor: pointer;
         }
+        .text.active{
+            color:var(--color-primary)
+        }
         .text-u {
             grid-column: 8/14;
         }
@@ -85,6 +88,12 @@
     }
 
     .phonetics-video-wrapper{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        position: relative;
+        min-height: 320px;
         video{
             border-radius: 0.5em;
             width: 100%;
