--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,7 @@
     --bg-color-secondary: #16161b;
     --font-color:rgb(228, 226, 222);
     --link-color:rgba(255, 255, 255, 0.7);
+    --color-primary:rgb(22, 119, 255);
 
 }
 
