--- a/src/app/english/english.css
+++ b/src/app/english/english.css
@@ -1,11 +1,12 @@
-.english-wrapper{
-    max-width:640px;
-    margin:0 auto;
+.english-wrapper {
+    max-width: 640px;
+    margin: 0 auto;
     padding: 1em;
     display: flex;
     flex-direction: column;
-    gap:0.5em;
-    .query-word{
+    gap: 0.5em;
+
+    .query-word {
 
     }
 
@@ -18,21 +19,26 @@
         gap: 0.2em;
         justify-content: start; /* 将网格元素水平靠左 */
         align-items: center; /* 垂直居中 */
-        .text{
+
+        .text {
             font-size: 18px;
         }
+
         .title-1 {
             writing-mode: vertical-rl;
             letter-spacing: 5px;
         }
+
         .title-1:nth-child(1) {
             grid-row: 1/4;
             grid-column: 1/2;
         }
+
         .title-1:nth-child(2) {
             grid-row: 4/7;
             grid-column: 1/2;
         }
+
         .title-2:nth-of-type(1) {
             color: red;
         }
@@ -41,51 +47,62 @@
             grid-row: 1/2;
             grid-column: 2/4;
         }
+
         > div:nth-child(4) {
             grid-row: 2/3;
             grid-column: 2/4;
         }
+
         > div:nth-child(5) {
             grid-row: 3/4;
             grid-column: 2/4;
         }
+
         > div:nth-child(6) {
             grid-row: 4/5;
             grid-column: 2/4;
         }
+
         > div:nth-child(7) {
             grid-row: 5/7;
             grid-column: 2/4;
         }
+
         .text {
             cursor: pointer;
         }
-        .text.active{
-            color:var(--color-primary)
+
+        .text.active {
+            color: var(--color-primary)
         }
+
         .text-u {
             grid-column: 8/14;
         }
+
         .text-ʊ {
             grid-column: 10/14;
         }
+
         .text-tʃ {
             grid-column: 12/14;
         }
+
         .text-dʒ {
             grid-column: 12/14;
         }
 
     }
 
-    .phonetics-video-wrapper{
+    .phonetics-video-wrapper {
         display: flex;
         align-items: center;
         justify-content: center;
         width: 100%;
         position: relative;
         min-height: 320px;
-        video{
+
+        video {
             border-radius: 0.5em;
             width: 100%;
             height: 100%;
@@ -94,10 +111,18 @@
     }
 
 
-    .phonetics-pdf-wrapper{
+    .phonetics-pdf-wrapper {
         position: relative;
         background: #fff;
         height: 808px;
+
+        .pdf-content {
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
         .page-controls {
             position: absolute;
             top: 2%;
@@ -110,6 +135,7 @@
             border-radius: 4px;
             z-index: 20;
             color: #010101;
+
             button {
                 width: 44px;
                 height: 44px;
@@ -118,28 +144,35 @@
                 font: inherit;
                 font-size: 0.8em;
                 color: #010101;
+
                 &:enabled:hover {
                     cursor: pointer;
                 }
+
                 &:disabled {
                     opacity: 0.5;
                 }
+
                 &:disabled:hover {
                     cursor: not-allowed;
                 }
-                &:enabled:hover,&:enabled:focus{
+
+                &:enabled:hover, &:enabled:focus {
                     background-color: #e6e6e6;
                     outline: 0;
                 }
-                &:first-child{
+
+                &:first-child {
                     border-top-right-radius: 0;
                     border-bottom-right-radius: 0;
                 }
+
                 &:last-child {
                     border-top-left-radius: 0;
                     border-bottom-left-radius: 0;
                 }
             }
+
             span {
                 font: inherit;
                 font-size: 0.8em;
@@ -149,49 +182,56 @@
         }
     }
 
-    .recommend{
+    .recommend {
         display: flex;
-        gap:0.5em;
+        gap: 0.5em;
         flex-wrap: wrap;
     }
 
-    .word-list{
+    .word-list {
         height: 280px;
         overflow-y: auto;
         display: flex;
         flex-direction: column;
-        gap:0.5em;
-        padding-top:1em;
-        .word-item{
+        gap: 0.5em;
+        padding-top: 1em;
+
+        .word-item {
             font-size: 1.5em;
             display: flex;
-            gap:1em;
+            gap: 1em;
             letter-spacing: 2px;
-            b{
+
+            b {
                 cursor: pointer;
             }
         }
     }
-    .volume-wrapper{
+
+    .volume-wrapper {
         display: flex;
         align-items: center;
-        gap:0.5em;
-        .ant-slider{
-            flex:1;
+        gap: 0.5em;
+
+        .ant-slider {
+            flex: 1;
         }
     }
 
     .word-content {
         padding: 0.5em;
+
         .word-sound-item {
             display: flex;
             align-items: center;
             gap: 0.5em;
-            b{
+
+            b {
                 letter-spacing: 2px;
                 font-weight: 400;
             }
-            span{
+
+            span {
                 cursor: pointer;
             }
         }
