--- a/src/app/english/english.css
+++ b/src/app/english/english.css
@@ -15,13 +15,14 @@
         font-size: 14px;
         display: grid;
         grid-template-rows: repeat(6, 2em);
-        grid-template-columns: repeat(13, 2em);
+        grid-template-columns: repeat(13, 2.4em);
         gap: 0.2em;
         justify-content: start; /* 将网格元素水平靠左 */
         align-items: center; /* 垂直居中 */
 
         .text {
-            font-size: 18px;
+            font-size: 20px;
+            letter-spacing: 1px;
         }
 
         .title-1 {
@@ -70,10 +71,30 @@
 
         .text {
             cursor: pointer;
+
+        }
+        .text-symbol{
+            position: relative;
+            padding-right: 0.5em;
+            .order{
+                position: absolute;
+                right: 0;
+                top: 0;
+                font-size: 10px;
+                display: none;
+                color: var(--color-primary)
+            }
         }
 
         .text.active {
             color: var(--color-primary)
+        }
+        .text.split{
+            text-decoration: underline;
+            text-decoration-color: var(--color-primary);
+            .order{
+                display: block;
+            }
         }
 
         .text-u {
