--- a/src/app/english/english.css
+++ b/src/app/english/english.css
@@ -75,10 +75,11 @@
         }
         .text-symbol{
             position: relative;
-            padding-right: 0.5em;
             .order{
                 position: absolute;
                 right: 0;
+                margin-right: -0.5em;
+                margin-top: -0.5em;
                 top: 0;
                 font-size: 10px;
                 display: none;
