fix: handle memory leak issue

--- a/src/app/english/english.css
+++ b/src/app/english/english.css
@@ -211,12 +211,12 @@
     }
 
     .word-list {
-        height: 280px;
-        overflow-y: auto;
-        display: flex;
-        flex-direction: column;
-        gap: 0.5em;
-        padding-top: 1em;
+        //height: 280px;
+        //overflow-y: auto;
+        //display: flex;
+        //flex-direction: column;
+        //gap: 0.5em;
+        //padding-top: 1em;
 
         .word-item {
             display: flex;
