fix: update styles and update README

--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -34,7 +34,7 @@
                     display: flex;
                     gap:3em;
                     a{
-                        color:var(--font-color);
+                        color:#fff;
                         text-decoration: none;
                         transition: 0.3s;
                         &:hover{
