feat: add css media query

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,7 +39,7 @@ a{
     color:var(--link-color);
     text-decoration: none;
     opacity: 0.85;
-    transition: opacity 0.3s;
+    transition: all 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
     &:hover{
         opacity: 1;
     }
