--- a/src/app/english/layout.css
+++ b/src/app/english/layout.css
@@ -30,7 +30,7 @@
         width: 60px;
         border-radius: var(--radius-md);
         padding: 1.5em 0;
-        box-shadow: 2px 2px 7.7px 0px rgba(146, 159, 202, 0.19), 0px 0px 1px 1px rgba(255, 255, 255, 0.45) inset;
+        box-shadow: 2px 2px 7.7px 0 rgba(146, 159, 202, 0.19), 0 0 1px 1px rgba(255, 255, 255, 0.45) inset;
 
         > li {
             list-style: none;
@@ -73,7 +73,7 @@
 
             &:hover {
                 .line1 {
-                    transform-origin: 50% 0%;
+                    transform-origin: 50% 0;
                     transform: rotate(17deg) translateY(1px);
                     border-top-left-radius: 4px;
                     border-top-right-radius: 4px;
@@ -131,7 +131,7 @@
             opacity: 0.6;
 
             .line1 {
-                transform-origin: 50% 0%;
+                transform-origin: 50% 0;
                 transform: rotate(-17deg) translateY(1px);
                 border-top-left-radius: 4px;
                 border-top-right-radius: 4px;
