--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,3 +52,16 @@ body {
     background: var(--bg-color-main);
 }
 
+.skeleton-wrapper {
+    .ant-skeleton.ant-skeleton-element {
+        width: 100%;
+        height: 100%;
+
+        .ant-skeleton-image {
+            width: 100%;
+            height: 100%;
+            min-height: 96px;
+        }
+    }
+
+}
