refactor: refactor english pages

--- a/src/app/english/phonetics/phonetics.css
+++ b/src/app/english/phonetics/phonetics.css
@@ -1,5 +1,6 @@
-.english-wrapper {
+.phonetics-wrapper {
     max-width: 640px;
+    width: 100%;
     margin: 0 auto;
     padding: 1em;
     display: flex;
