--- a/src/app/english/layout.css
+++ b/src/app/english/layout.css
@@ -34,6 +34,7 @@
         padding: 1.5em 0;
         box-shadow: 2px 2px 7.7px 0 rgba(146, 159, 202, 0.19), 0 0 1px 1px rgba(255, 255, 255, 0.45) inset;
 
+
         > li {
             list-style: none;
             display: flex;
@@ -51,9 +52,9 @@
             opacity: 0.6;
         }
 
-        > a {
+         a {
             font-size: 24px;
-            filter: brightness(1.2);
+             color:#fff;
         }
     }
 
