--- a/src/app/day/styles.module.scss
+++ b/src/app/day/styles.module.scss
@@ -13,12 +13,6 @@
     position: sticky;
     top:0;
     background: #000;
-    h2{
-        font-size: 24px;
-        b{
-            color:var(--color-primary)
-        }
-    }
 }
 .calender {
     display: flex;
@@ -55,6 +49,9 @@
     height: 100px;
     border-radius: 4px;
     flex: 1;
+}
+.day.holiday{
+    background-color: #16361b;
 }
 .emptyDay {
     background-color: transparent;
