--- a/src/app/day/styles.module.scss
+++ b/src/app/day/styles.module.scss
@@ -3,6 +3,7 @@
   text-align: center;
   color: rgba(255, 255, 255, 0.8);
   position: relative;
+  padding-bottom: 20em;
 }
 
 .header {
@@ -14,6 +15,7 @@
   position: sticky;
   top: 0;
   background: #000;
+  z-index: 1;
 }
 
 .headLine {
@@ -32,7 +34,7 @@
 .calender {
   display: flex;
   flex-direction: column;
-  gap: 2px;
+  gap: 1em;
   padding: 1em;
 }
 
@@ -66,8 +68,8 @@
   padding: 2px;
   background-color: var(--bg-color-secondary);
   min-width: 50px;
-  height: 100px;
-  border-radius: 4px;
+  height: 80px;
+  border-radius: 8px;
   flex: 1;
 }
 
@@ -80,6 +82,6 @@
   flex: 1;
   padding: 2px;
   min-width: 50px;
-  height: 100px;
+  height:100%;
   border-radius: 4px;
 }
