--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,8 +48,8 @@ a{
 html,
 body {
     max-width: 100vw;
-    color: var(--font-color);
-    background: var(--bg-color-main);
+    color: var(--color-text-1);
+    background: var(--color-bg-1);
 }
 
 .skeleton-wrapper {
