--- a/src/app/english/guide/page.module.scss
+++ b/src/app/english/guide/page.module.scss
@@ -1,20 +1,37 @@
-.wrapper{
+.wrapper {
   position: relative;
 }
-.content{
+
+.content {
   max-width: 640px;
   width: 100%;
-  margin:0 auto;
-  >h1{
+  margin: 0 auto;
+
+  > h1 {
     text-align: center;
     margin-bottom: 2em;
-    padding-top:1em;
-  }
-  >h2{
-    margin-bottom: 1em;
+    padding-top: 1em;
   }
 
 }
-.timelineWrapper{
-  padding-top:2em;
+
+.ul {
+  padding-left: 1.5em;
+  font-size: 14px;
+  line-height: 1.8;
+}
+
+.section {
+  margin-bottom: 2em;
+
+  > h2 {
+    margin-bottom: 0.5em;
+  }
+}
+
+.timelineWrapper {
+  padding-top: 2em;
+}
+.card{
+
 }
