feat: clean code

--- a/src/app/(tool)/listen/page.module.scss
+++ b/src/app/(tool)/listen/page.module.scss
@@ -14,6 +14,16 @@
         max-width: 1440px;
     }
 }
+.videoContent{
+    margin-right: 1em;
+}
+.videoAside{
+    position: fixed;
+    width: 400px;
+    right: 10px;
+    top:10px
+}
+
 
 @media (max-width: 960px) {
     .videoWrapper {
