--- a/src/app/(tool)/listen/components/VideoConfig/styles.module.scss
+++ b/src/app/(tool)/listen/components/VideoConfig/styles.module.scss
@@ -1,3 +1,9 @@
+.videoConfig{
+    display: flex;
+    align-items: center;
+    padding:1em;
+    flex-wrap: wrap;
+}
 .configItem {
     margin-right: 20px;
 }
