feat: update english learning guide

--- a/src/app/english/guide/page.module.scss
+++ b/src/app/english/guide/page.module.scss
@@ -1,11 +1,16 @@
 .wrapper {
   position: relative;
+  background: var(--color-bg-2);
+  padding-bottom: 2em;
 }
 
 .content {
   max-width: 640px;
   width: 100%;
   margin: 0 auto;
+  @media (max-width: 640px) {
+    padding: 0 1em;
+  }
 
   > h1 {
     text-align: center;
@@ -25,7 +30,7 @@
   margin-bottom: 2em;
 
   > h2 {
-    margin-bottom: 0.5em;
+    margin-bottom: 1em;
   }
 }
 
