--- a/src/app/english/guide/page.module.scss
+++ b/src/app/english/guide/page.module.scss
@@ -1,42 +1,53 @@
 .wrapper {
-  position: relative;
-  background: var(--color-bg-2);
-  padding-bottom: 2em;
+    position: relative;
+    background: var(--color-bg-2);
+    padding-bottom: 2em;
 }
 
 .content {
-  max-width: 640px;
-  width: 100%;
-  margin: 0 auto;
-  @media (max-width: 640px) {
-    padding: 0 1em;
-  }
+    max-width: 640px;
+    width: 100%;
+    margin: 0 auto;
+    @media (max-width: 640px) {
+        padding: 0 1em;
+    }
 
-  > h1 {
-    text-align: center;
-    margin-bottom: 2em;
-    padding-top: 1em;
-  }
-
+    > h1 {
+        text-align: center;
+        margin-bottom: 2em;
+        padding-top: 1em;
+    }
 }
 
 .ul {
-  padding-left: 1.5em;
-  font-size: 14px;
-  line-height: 1.8;
+    padding-left: 1.5em;
+    font-size: 14px;
+    line-height: 1.8;
 }
 
 .section {
-  margin-bottom: 2em;
+    margin-bottom: 2em;
 
-  > h2 {
-    margin-bottom: 1em;
-  }
+    > h2 {
+        margin-bottom: 1em;
+    }
 }
-
+.table {
+    width: 100%; /* 表格宽度 */
+    border-collapse: collapse; /* 合并边框 */
+    margin-top: 0.5em;
+    th,
+    td {
+        border: 1px solid var(--color-divider-2); /* 边框颜色 */
+        text-align: left; /* 文本左对齐 */
+        padding: 12px; /* 内边距 */
+    }
+    th {
+        background-color: var(--color-card-1);
+    }
+}
 .timelineWrapper {
-  padding-top: 2em;
+    padding-top: 2em;
 }
-.card{
-
+.card {
 }
