feat: update ai toolbox

--- a/src/app/(tool)/ai/styles.module.scss
+++ b/src/app/(tool)/ai/styles.module.scss
@@ -1,7 +1,11 @@
 .wrapper{
-  width: 960px;
+  width: 750px;
   margin:0 auto;
-  padding-top:20px;
+  >h1{
+    text-align: center;
+    padding:1em 0;
+
+  }
 }
 .outputBox{
   padding:1em;
