--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,7 +49,8 @@ html,
 body {
     max-width: 100vw;
     color: var(--color-text-1);
-    background: var(--color-bg-1);
+    background: var(--color-bg-4);
+    height: 100vh;
 }
 
 .skeleton-wrapper {
