--- a/src/app/english/layout.css
+++ b/src/app/english/layout.css
@@ -21,7 +21,7 @@
     }
 
     .en-sidebar-menus {
-        background: var(--bg-color-main);
+        background: var(--color-bg-1);
         position: absolute;
         top: 50%;
         right: -8px;
@@ -35,7 +35,7 @@
         width: 60px;
         border-radius: var(--radius-md);
         padding: 1.5em 0;
-        box-shadow: 2px 2px 7.7px 0 rgba(146, 159, 202, 0.19), 0 0 1px 1px rgba(255, 255, 255, 0.45) inset;
+        box-shadow: 2px 2px 7.7px 0 rgba(146, 159, 202, 0.4), 0 0 1px 1px rgba(255, 255, 255, 0.45) inset;
 
 
         > li {
