--- a/src/app/theme.css
+++ b/src/app/theme.css
@@ -17,7 +17,7 @@
     --color-funct-10: #fe5533;
 
     /* 卡片 Card */
-    --color-card-1: #f8f9fb;
+    --color-card-1: #f5f5f7;
     --color-card-2: #ffffff;
     --color-card-3: #ffffff;
     --color-card-4: #ffffff;
@@ -28,7 +28,7 @@
     --color-bg-1: #ffffff;
     --color-bg-2: #fcfcfc;
     --color-bg-3: #f8f9fb;
-    --color-bg-4: rgba(0, 0, 0, 0.65);
+    --color-bg-4: #ffffff;
     --color-bg-5: #f5f5f7;
     /* 文字 Text */
     --color-text-1: #262933;
