feat: update english guide

--- a/src/app/english/guide/page.module.scss
+++ b/src/app/english/guide/page.module.scss
@@ -51,3 +51,13 @@
 }
 .card {
 }
+
+.enLearningAnchor{
+    width:200px;
+    position: absolute;
+    right: 20px;
+    padding-top:4em;
+    @media (max-width: 640px) {
+        display: none;
+    }
+}
